--- a/utils/Hackintool.app/Contents/Resources/Audio/Codecs.plist
+++ b/utils/Hackintool.app/Contents/Resources/Audio/Codecs.plist
@@ -145,6 +145,7 @@
 		<key>LayoutIDs</key>
 		<array>
 			<integer>21</integer>
+			<integer>22</integer>
 		</array>
 		<key>MaxKernel</key>
 		<integer>13</integer>
@@ -383,6 +384,7 @@
 			<integer>9</integer>
 			<integer>10</integer>
 			<integer>11</integer>
+			<integer>12</integer>
 			<integer>13</integer>
 			<integer>14</integer>
 			<integer>15</integer>
@@ -687,6 +689,7 @@
 			<integer>3</integer>
 			<integer>11</integer>
 			<integer>18</integer>
+			<integer>21</integer>
 		</array>
 		<key>MaxKernel</key>
 		<integer>15</integer>
@@ -695,6 +698,7 @@
 		<key>Revisions</key>
 		<array>
 			<string>0x100001</string>
+			<string>0x100002</string>
 		</array>
 	</dict>
 	<dict>
@@ -780,6 +784,24 @@
 		<array>
 			<string>0x100002</string>
 			<string>0x100003</string>
+		</array>
+	</dict>
+	<dict>
+		<key>CodecID</key>
+		<integer>2206496354</integer>
+		<key>CodecName</key>
+		<string>STAC9872AK</string>
+		<key>LayoutIDs</key>
+		<array>
+			<integer>12</integer>
+		</array>
+		<key>MaxKernel</key>
+		<integer>15</integer>
+		<key>MinKernel</key>
+		<integer>12</integer>
+		<key>Revisions</key>
+		<array>
+			<string>0x100201</string>
 		</array>
 	</dict>
 	<dict>
@@ -1902,6 +1924,7 @@
 		<key>LayoutIDs</key>
 		<array>
 			<integer>3</integer>
+			<integer>13</integer>
 		</array>
 		<key>MaxKernel</key>
 		<integer>13</integer>
